// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ListSSOConfiguration /> renders correctly with empty list 1`] = `
<div
  className="box box-primary container-fluid"
>
  <div
    className="box-header"
  >
    <h3
      className="box-title"
    >
      <FormattedMessage
        id="open-id-authentication-method"
        values={Object {}}
      />
    </h3>
  </div>
  <div
    className="box-content box-content__content-form"
  >
    <ListGroup
      className=""
    >
      <FormattedMessage
        id="no-method-configured"
        values={Object {}}
      />
    </ListGroup>
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="primary"
      className="mt-15"
      disabled={false}
      onClick={[Function]}
    >
      <FormattedMessage
        id="global.add"
        values={Object {}}
      />
    </Button>
    <Connect(InjectIntl(ReduxForm))
      isCreating={true}
      onClose={[Function]}
      show={false}
    />
  </div>
</div>
`;

exports[`<ListSSOConfiguration /> renders correctly with items 1`] = `
<div
  className="box box-primary container-fluid"
>
  <div
    className="box-header"
  >
    <h3
      className="box-title"
    >
      <FormattedMessage
        id="open-id-authentication-method"
        values={Object {}}
      />
    </h3>
  </div>
  <div
    className="box-content box-content__content-form"
  >
    <ListGroup
      className=""
    >
      <ForwardRef(Relay(SSOConfigurationItem))
        configuration={
          Object {
            "$fragmentRefs": null,
            "accessTokenUrl": "https://localhost:8888/token",
            "authorizationUrl": "https://localhost:8888/authorization",
            "clientId": "clientId",
            "id": "oauth2ID",
            "logoutUrl": "https://localhost:8888/logout",
            "name": "Open ID Provider",
            "secret": "SecretKey",
            "userInfoUrl": "https://localhost:8888/user",
          }
        }
        key="0"
      />
    </ListGroup>
    <Button
      active={false}
      block={false}
      bsClass="btn"
      bsStyle="primary"
      className="mt-15"
      disabled={false}
      onClick={[Function]}
    >
      <FormattedMessage
        id="global.add"
        values={Object {}}
      />
    </Button>
    <Connect(InjectIntl(ReduxForm))
      isCreating={true}
      onClose={[Function]}
      show={false}
    />
  </div>
</div>
`;
